# FunPayBORS

./: .gitignore  CREATE_PLUGINS.md  Cargo.toml  README.md  USE_PLUGINS.md  config.json
plugin_example/: base.py  plugin.py
plugin_exempel/: plugin.py
plugins/console_info/: plugin.py
src/: args.rs  main.rs  message.rs  plugins_py.rs  server.rs  sock.rs  utils.rs
src/handlers/: message.rs  mod.rs  order.rs  order_status_changed_handler.rs
src/models/: mod.rs  strategy.rs
src/plugins_py/: mod.rs  utils.rs
