[package]
name = "FunPayBORS"
version = "0.1.0"
edition = "2024"

[dependencies]
funpay-client = "0.2.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
parking_lot = { version = "0.12.5", features = ["nightly", "serde"] }
pyo3 = "0.27.2"
